--- a/styles/style.css
+++ b/styles/style.css
@@ -7,25 +7,353 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  color: #000000;
 }
 
 .header {
+  display: flex;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+}
+
+.logo_place_header {
+  position: absolute;
+  margin: 30px 0 0 64px;
+  height: 32px;
+  width: 183px;
+  z-index: 2;
+}
+
+.header__title {
+  box-sizing: border-box;
+  align-self:center;
+  margin: 0 0 0 64px;
+  width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight:bold;
+  z-index: 2;
+}
+
+.header__subtitle {
+  position: absolute;
+  box-sizing: border-box;
+  align-self: flex-end;
+  margin: 0 0 30px 64px;
+  width: 388px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight:normal;
+  z-index: 2;
+}
+
+.header__link {
+  text-decoration:none;
+  color: #2f80ed;
+  margin: 0;
+}
+
+.header__main-illustration {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  height: 608px;
+  width: 765px;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0px;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.description {
+  display: flex;
+  padding-top: 100px;
+  justify-content: center;
+}
+
+.description__two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.description__two-columns__brief {
+  box-sizing: border-box;
+  color: #2f80ed;
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight:normal;
+  margin: 0;
+}
+
+.description__two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.description__two-columns__paragraph {
+  box-sizing: border-box;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight:normal;
+  margin: 0 auto;
+  padding-bottom: 30px;
+}
+
+.description__two-columns__paragraph:last-child {
+  padding-bottom: 0px;
+}
+
+.description__two-columns__span-accent {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight:bold;
+}
+
+.digits {
+  padding: 100px 0;
+}
+
+.digits__section-title_theme_light {
+  box-sizing: border-box;
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight:bold;
+  text-align:center;
+  margin: 0 auto;
+}
+
+.digits__section-subtitle_theme_light {
+  box-sizing: border-box;
+  width: 60%;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight:normal;
+  text-align:center;
+  margin: 20px auto 0;
+}
+
+.table_theme_light {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0;
+  list-style-type:none;
+}
+
+.table__cell_theme_light {
+  box-sizing: border-box;
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading_theme_light {
+  box-sizing: border-box;
+  margin: 0 auto;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight:bold;
+}
+
+.table__text_theme_light {
+  box-sizing: border-box;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight:normal;
+  margin: 20px 0 0;
+}
+
+.feynman {
+  position: relative;
+  height: 890px;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 0 auto;
+  padding-top: 100px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight:bold;
+  text-align:center;
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  padding-top: 70px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight:normal;
+  text-align:center;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration:none;
+  color: #2f80ed;
+  margin: 0;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight:normal;
+}
+
+.kaufman {
+  position: relative;
+  padding: 90px 0;
+  background-color: #1f1f1f;
+  color: #ffffff;
+  overflow: hidden;
+}
+
+.kaufman__section-title_theme_dark {
+  box-sizing: border-box;
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight:bold;
+  text-align:center;
+  margin: 0 auto;
+  z-index: 2;
+}
+
+.kaufman__section-subtitle_theme_dark {
+  box-sizing: border-box;
+  width: 60%;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight:normal;
+  text-align:center;
+  margin: 20px auto 0;
+  z-index: 2;
+}
+
+.table_theme_dark {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0;
+  list-style-type:none;
+  counter-reset: number_cell; /* Задаём имя счетчика и обнуляем его */
+  z-index: 2;
+}
+
 .table__cell_theme_dark {
+  box-sizing: border-box;
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+  z-index: 2;
+}
+
+.table__heading_theme_dark {
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.table__heading_theme_dark::before {
+  content: counter(number_cell); /* Выводим число */
+  counter-increment: number_cell; /* Увеличиваем значение счётчика */
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight:bold;
+}
+
+.table__text_theme_dark {
+  box-sizing: border-box;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight:normal;
+  margin: 20px 0 0;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  bottom: 90px;
+  right: -210px;
+  z-index: 1;
+}
+
+.footer {
+  padding: 60px 0 40px;
+  background-color: #1f1f1f;
+  color: #ffffff;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  height: 35px;
+  width: 183px;
+}
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight:normal;
+  margin: 18 0;
+}
+
+.footer__column-heading {
+  margin: 0;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight:bold;
+}
+
+.footer__column-links {
+  margin: 0;
+  padding: 20px 0 16px;
+  list-style-type:none;
+}
+
+.footer__column-link {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight:normal;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
 }
