--- a/styles/style.css
+++ b/styles/style.css
@@ -59,10 +59,11 @@
 
 .header__main-illustration {
   position: absolute;
-  bottom: 0px;
-  right: 0px;
   height: 608px;
   width: 765px;
+  bottom: 0;
+  right: 0;
+  object-fit: cover;
   z-index: 1;
 }
 
@@ -76,19 +77,23 @@
   background-color: #2f80ed;
 }
 
+.content {
+  margin: 0 auto;
+}
+
 .description {
   display: flex;
   padding-top: 100px;
   justify-content: center;
 }
 
-.description__two-columns {
+.two-columns {
   display: flex;
   justify-content: space-between;
   width: 80%;
 }
 
-.description__two-columns__brief {
+.two-columns__brief {
   box-sizing: border-box;
   color: #2f80ed;
   width: 175px;
@@ -98,12 +103,12 @@
   margin: 0;
 }
 
-.description__two-columns__main-text {
+.two-columns__main-text {
   width: 80%;
   min-width: 784px;
 }
 
-.description__two-columns__paragraph {
+.two-columns__paragraph {
   box-sizing: border-box;
   font-size: 24px;
   line-height: 34px;
@@ -112,11 +117,11 @@
   padding-bottom: 30px;
 }
 
-.description__two-columns__paragraph:last-child {
+.two-columns__paragraph:last-child {
   padding-bottom: 0px;
 }
 
-.description__two-columns__span-accent {
+.two-columns__span-accent {
   font-size: 24px;
   line-height: 34px;
   font-weight:bold;
@@ -124,10 +129,11 @@
 
 .digits {
   padding: 100px 0;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-.digits__section-title_theme_light {
-  box-sizing: border-box;
+.section-title_theme_light {
   width: 60%;
   font-size: 60px;
   line-height: 1.15;
@@ -136,8 +142,7 @@
   margin: 0 auto;
 }
 
-.digits__section-subtitle_theme_light {
-  box-sizing: border-box;
+.section-subtitle_theme_light {
   width: 60%;
   font-size: 24px;
   line-height: 34px;
@@ -157,13 +162,11 @@
 }
 
 .table__cell_theme_light {
-  box-sizing: border-box;
   width: 250px;
   margin-top: 60px;
 }
 
 .table__heading_theme_light {
-  box-sizing: border-box;
   margin: 0 auto;
   font-size: 24px;
   line-height: 1.15;
@@ -171,7 +174,6 @@
 }
 
 .table__text_theme_light {
-  box-sizing: border-box;
   font-size: 18px;
   line-height: 1.2;
   font-weight:normal;
@@ -180,7 +182,7 @@
 
 .feynman {
   position: relative;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-size: 867px 637px;
@@ -225,10 +227,10 @@
   background-color: #1f1f1f;
   color: #ffffff;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
-.kaufman__section-title_theme_dark {
-  box-sizing: border-box;
+.section-title_theme_dark {
   width: 60%;
   font-size: 60px;
   line-height: 1.15;
@@ -238,8 +240,7 @@
   z-index: 2;
 }
 
-.kaufman__section-subtitle_theme_dark {
-  box-sizing: border-box;
+.section-subtitle_theme_dark {
   width: 60%;
   font-size: 24px;
   line-height: 34px;
@@ -262,14 +263,12 @@
 }
 
 .table__cell_theme_dark {
-  box-sizing: border-box;
   width: 200px;
   margin-top: 80px;
   z-index: 2;
 }
 
 .table__heading_theme_dark {
-  box-sizing: border-box;
   margin: 0 auto;
 }
 
@@ -282,7 +281,6 @@
 }
 
 .table__text_theme_dark {
-  box-sizing: border-box;
   font-size: 18px;
   line-height: 1.2;
   font-weight:normal;
@@ -296,6 +294,9 @@
   top: 0;
   bottom: 90px;
   right: -210px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
   z-index: 1;
 }
 
@@ -303,6 +304,10 @@
   padding: 60px 0 40px;
   background-color: #1f1f1f;
   color: #ffffff;
+  min-height: 350px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer__columns {
@@ -310,6 +315,7 @@
   justify-content: space-between;
   width: 90%;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .footer__column_content_copyright {
@@ -328,7 +334,8 @@
   font-size: 18px;
   line-height: 25px;
   font-weight:normal;
-  margin: 18 0;
+  margin: 18px 0;
+
 }
 
 .footer__column-heading {
