--- a/styles/style.css
+++ b/styles/style.css
@@ -20,11 +20,14 @@
   background-color: #f2f2f2;
 }
 
+.logo {
+  width: 183px;
+}
+
 .logo_place_header {
   position: absolute;
   margin: 30px 0 0 64px;
   height: 32px;
-  width: 183px;
   z-index: 2;
 }
 
@@ -294,7 +297,6 @@
 
 .logo_place_footer {
   height: 35px;
-  width: 183px;
 }
 
 .footer__author {
