--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -2,7 +2,9 @@
   position: absolute;
   box-sizing: border-box;
   align-self: flex-end;
-  margin: 0 0 30px 64px;
+  margin: 0;
+  left: 64px;
+  bottom: 30px;
   width: 388px;
   font-size: 18px;
   line-height: 25px;
