--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,6 +1,8 @@
 .logo_place_header {
   position: absolute;
-  margin: 30px 0 0 64px;
+  margin: 0;
+  top: 30px;
+  left: 64px;
   height: 32px;
   z-index: 2;
 }
