--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,5 +1,8 @@
 .video__iframes {
   margin: 50px auto 0;
+  padding: 0;
+  list-style-type: none;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
 }
