--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,12 +1,16 @@
 .video__iframe {
   width: 515px;
   height: 316px;
-  margin-right: 20px;
+  margin-right: 0;
   padding: 0;
   box-sizing: border-box;
   border: none;
 }
 
+.video__iframe:first-child {
+  margin-right: 10px;
+}
+
 .video__iframe:last-child {
-  margin: 0;
+  margin-left: 10px;
 }
